# dros-core-rs

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build-dros-core.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: ffi_decide.rs
src/: audit_ring.rs  dct.rs  ffi.rs  guard.rs  lib.rs  navigator.rs  simd_engine.rs  syscall_hardener.rs  types.rs  weaver.rs
tests/: core_tests.rs  integration_test.rs
