[package]
name = "dros-core-rs"
version = "7.2.0"
edition = "2021"
authors = ["Jimmy Chen", "Antigravity"]
license = "AGPL-3.0"
description = "Dharma Reasoning OS (DROS) Standard Micro-kernel - Rust Edition"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }
