[package]
name = "dros-core-rs"
version = "7.2.0"
edition = "2021"
authors = ["Jimmy Chen", "Antigravity"]
license = "AGPL-3.0"
description = "Dharma Reasoning OS (DROS) Standard Micro-kernel - Rust Edition"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
arc-swap = "1.6"

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
